update authors/