@@ -7,7 +7,7 @@ import com.ht.library.author.dto.AuthorResponse;
 import com.ht.library.book.Book;
 import com.ht.library.configs.cloudinary.FileUpload;
 import com.ht.library.exception.ResourceNotFoundException;
-import com.ht.library.genre.Genre;
+import com.ht.library.genre.dto.GenreItemResponse;
 import com.ht.library.utils.CommonUtils;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
@@ -32,23 +32,26 @@ public class AuthorServiceImpl implements AuthorService{
         .findAll()
         .stream()
         .map(e -> mapper.map(e, AuthorResponse.class))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
   public AuthorDetailResponse getAuthorById(UUID id) {
     Author author = repository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Author not found"));
-    int numberOfReview = 0;
+    int numberOfReviews = 0;
+    int numberOfRatings = 0;
     float sumOfRatings = 0F;
-    List<Genre> genres = new ArrayList<>();
-//    for (Book book: author.getBooks()) {
-//      numberOfReview += book.getNumberOfReviews();
-//      sumOfRatings += book.getSumOfRatings();
-//      genres.addAll(book.getGenres());
-//    }
+    List<GenreItemResponse> genres = new ArrayList<>();
+    for (Book book: author.getBooks()) {
+      numberOfReviews += book.getNumberOfReviews();
+      numberOfRatings += book.getNumberOfRatings();
+      sumOfRatings += book.getNumberOfRatings() * book.getAverageRate();
+      genres.addAll(book.getGenres().stream().map(genre -> mapper.map(genre, GenreItemResponse.class)).toList());
+    }
     AuthorDetailResponse authorDetailResponse = mapper.map(author, AuthorDetailResponse.class);
-    authorDetailResponse.setNumberOfReview(numberOfReview);
-    authorDetailResponse.setSumOfRatings(sumOfRatings);
+    authorDetailResponse.setNumberOfReviews(numberOfReviews);
+    authorDetailResponse.setNumberOfRating(numberOfRatings);
+    authorDetailResponse.setAverageRate(sumOfRatings / numberOfRatings);
     authorDetailResponse.setGenres(genres);
     return authorDetailResponse;
   }
